--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#f78f21",
   "icons": [
     {
-      "src": "/favorite.png",
+      "src": "https://wardimanxixv.github.io/PWA-Kegiatan-KKLP/favorite.png",
       "type": "image/png",
       "sizes": "1024x1024"
     },
     {
-      "src": "/favorite.png",
+      "src": "https://wardimanxixv.github.io/PWA-Kegiatan-KKLP/favorite.png",
       "type": "image/png",
       "sizes": "1024x1024",
       "purpose": "maskable"
