--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "KKLP Pelayanan Masyarakat",
-  "start_url": "/PWA-Kegiatan-KKLP",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "any",
   "background_color": "#fff",
